Fix for TG-68 #closed
Reason: tooltip was overlapping the screen.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
 $roboto-font-path: "~materialize-css/fonts/roboto/";
 $material-design-icons-font-path: "~material-design-icons-iconfont/dist/fonts/";
 // $primary-color: #3f51b5;
-$primary-color: #00b8d4;
-$secondary-color: #00b8d4 ;
+$primary-color: #3f51b5;
+$secondary-color: #3f51b5 ;
 $text-color: lighten(black, 30%);
 $border-color: #e5e5e5;
 $font-size: 14px;
